--- a/app/src/main/res/drawable/bottom_background.xml
+++ b/app/src/main/res/drawable/bottom_background.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="#00FFFFFF"/>
+    <solid android:color="@color/bottom_footer_bg"/>
 
-    <stroke android:width="1dp"
+    <stroke android:width="0dp"
         android:color="@color/my_light_primary"
         />
 
