--- a/app/src/main/res/drawable/route_square_svgrepo_com.xml
+++ b/app/src/main/res/drawable/route_square_svgrepo_com.xml
@@ -6,8 +6,8 @@
   <path
       android:pathData="M16.19,2H7.82C4.17,2 2,4.17 2,7.81V16.18C2,19.82 4.17,21.99 7.81,21.99H16.18C19.82,21.99 21.99,19.82 21.99,16.18V7.81C22,4.17 19.83,2 16.19,2Z"
       android:strokeAlpha="0.4"
-      android:fillColor="#292D32"
-      android:fillAlpha="0.4"/>
+      android:fillColor="@color/quantum_orange400"
+      android:fillAlpha="1.0"/>
   <path
       android:pathData="M17.351,9.05L15.011,16.59C14.451,18.38 11.941,18.41 11.351,16.63L10.651,14.56C10.461,13.99 10.011,13.53 9.441,13.35L7.361,12.65C5.591,12.06 5.621,9.53 7.411,8.99L14.951,6.64C16.431,6.19 17.821,7.58 17.351,9.05Z"
       android:fillColor="#292D32"/>
