--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -4,10 +4,16 @@
         <item name="colorPrimary">@color/my_light_primary</item>
         <item name="android:textColorPrimary">@color/white</item>
         <item name="android:textColorSecondary">@android:color/darker_gray</item>
-        <item name="android:textColor">@color/black</item>
-        <item name="colorButtonNormal">@color/white</item>
-        <item name="fontFamily">@font/ubuntu</item>
+        <item name="android:textColor">@color/textColor</item>
+        <item name="android:textStyle">bold</item>
+        <item name="colorButtonNormal">#414141</item>
+    </style>
 
+    <style name="textInputTheme">
+        <item name="colorPrimary">@color/primary_color</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:textColorPrimary">@color/black</item>
+        <item name="android:textColorSecondary">@android:color/darker_gray</item>
     </style>
 
     <style name="Theme.QuickQR" parent="Base.Theme.QuickQR" />
